fix: Make search icon visible on mobile screen

--- a/src/app.css
+++ b/src/app.css
@@ -9,12 +9,12 @@
 }
 
 @layer utilities {
-	.display-l {
+	.display-lg {
 		@apply text-[2rem] font-light -tracking-[0.5px];
 	}
 
-	.display-m {
-		@apply text-2xl font-light;
+	.display-md {
+		@apply text-base font-light leading-tight md:text-2xl;
 	}
 
 	.display-sm {
